# llama-index-env

./: .env  Dockerfile  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
index/: __main__.py
