[tool.poetry]
name = "index"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = {version = "^2.2.0+cu118", source = "torch-cu118"}
transformers = "^4.37.2"
accelerate = "^0.27.0"
bitsandbytes = "^0.42.0"
llama-index = "^0.9.46"
ipython = "*"
requests = "^2.31.0"
pypdf = "^4.0.1"


[[tool.poetry.source]]
name = "torch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
